# rapid_driver

./: .gitignore  Cargo.toml
.claude/: CLAUDE.md
docs/: communication-protocol.md
scripts/: blink_act_led.sh  install_systemd.sh
src/: main.rs  registry.rs  udev_rule.rs
src/api/: mod.rs  routes.rs
src/discovery/: mdns.rs  mod.rs  usb.rs
src/engine/: command.rs  mod.rs  recording.rs  replay.rs  topic_bus.rs
src/engine/recorder/: mcap_writer.rs  messages.rs  mod.rs  schemas.rs  zmq_sub.rs
src/mask/: debug.rs  layout.rs  mod.rs  shm.rs
src/tui/: events.rs  mod.rs
tools/: replay_listener_test.py
