[package]
name = "rapid_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
udev = "0.9"
nix = { version = "0.29", features = ["poll", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
crossterm = "0.28"
ratatui = "0.29"
chrono = "0.4"
